# AP-class

./: Cargo.toml
.cargo/: config.toml
src/: README.md  main.rs
src/classes/: c01_basic.rs  c02_ownership.rs  c03_enums.rs  c04_structs.rs  c04_structshelper.rs  c05_modules.rs  c06_testing.rs  c07_lifetimes.rs  c07b_maps.rs  c08_lifetimes.rs  c08_traits.rs  c09_maps.rs  c09_traits.rs  c10_OOP.rs  c11_heap.rs  c12_fp.rs  c99_QA.rs  dailyplan.md  mod.rs
src/full_files/: TODO.md  c01_basic.rs  c02_ownership.rs  c03_enums.rs  c04_lifetimes.rs  c04_structs.rs  c04_structshelper.rs  c05_modules.rs  c06_testing.rs  c07_lifetimes.rs  c07_project.md  c07b_maps.rs  c08_lifetimes.rs  c09_traits.rs  c10_OOP.rs  c11_heap.rs  c12_fp.rs  mod.rs
src/old_projs/: c07_[WD] Market Protocol.md  c07_project.md
src/primers/: FP.md
